apps/feishin/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: feishin
  labels:
    app.kubernetes.io/name: feishin
    app.kubernetes.io/instance: feishin
    pod-security.kubernetes.io/enforce: restricted
