apps/feishin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: feishin
  labels:
    app.kubernetes.io/name: feishin
    app.kubernetes.io/instance: feishin
spec:
  ipFamilyPolicy: PreferDualStack
  selector:
    app.kubernetes.io/name: feishin
    app.kubernetes.io/instance: feishin
  ports:
    - name: feishin
      appProtocol: http
      protocol: TCP
      port: 9180
      targetPort: http
