apps/feishin/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: feishin
  labels:
    app.kubernetes.io/name: feishin
    app.kubernetes.io/instance: feishin
spec:
  parentRefs:
    - name: cilium-gateway-system
      namespace: kube-system
      port: 443
  hostnames:
    - music.guedescloud.com.br
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: feishin
          port: 9180
